--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "gatsby-plugin-mdx": "^3.5.2",
     "gatsby-plugin-sass": "^5.5.0",
     "gatsby-plugin-sharp": "^4.5.2",
+    "gatsby-remark-vscode": "^3.3.1",
     "gatsby-source-filesystem": "^4.5.2",
     "gatsby-transformer-sharp": "^4.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.49.0"
+  },
+  "devDependencies": {
+    "standard": "^16.0.4"
   }
 }
