--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-source-filesystem": "^4.5.2",
     "gatsby-transformer-remark": "^5.5.2",
     "gatsby-transformer-sharp": "^4.5.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.49.0"
