--- a/package.json
+++ b/package.json
@@ -17,22 +17,23 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "gatsby": "^4.5.4",
+    "gatsby": "^4.6.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-image": "^2.5.2",
-    "gatsby-plugin-mdx": "^3.5.2",
-    "gatsby-plugin-sass": "^5.5.0",
-    "gatsby-plugin-sharp": "^4.5.2",
+    "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-mdx": "^3.6.0",
+    "gatsby-plugin-sass": "^5.6.0",
+    "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-remark-vscode": "^3.3.1",
-    "gatsby-source-filesystem": "^4.5.2",
-    "gatsby-transformer-remark": "^5.5.2",
-    "gatsby-transformer-sharp": "^4.5.0",
+    "gatsby-source-filesystem": "^4.6.0",
+    "gatsby-transformer-remark": "^5.6.0",
+    "gatsby-transformer-sharp": "^4.6.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.49.0"
   },
   "devDependencies": {
-    "standard": "^16.0.4"
+    "standard": "^16.0.4",
+    "typescript": "^4.5.5"
   }
 }
