--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.6.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-graphql-codegen": "^3.1.0",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-mdx": "^3.6.0",
@@ -30,8 +32,8 @@
     "gatsby-source-filesystem": "^4.6.0",
     "gatsby-transformer-remark": "^5.6.0",
     "gatsby-transformer-sharp": "^4.6.0",
-    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.1",
     "sass": "^1.49.0"
   },
